--- a/package.json
+++ b/package.json
@@ -3,22 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@babel/core": "7.5.5",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
-    "antd": "^3.25.0",
+    "antd": "^4.7.3",
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
     "babel-eslint": "10.0.2",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.6",
-    "babel-polyfill": "^6.26.0",
     "babel-plugin-named-asset-import": "^0.3.3",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react-app": "^9.0.1",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
+    "customize-cra": "^1.0.0",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "eslint": "^6.1.0",
@@ -46,12 +48,15 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "rc-form": "^2.4.11",
     "react": "^16.10.2",
     "react-app-polyfill": "^1.0.2",
+    "react-app-rewired": "^2.1.6",
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
     "react-intl-universal": "^2.2.1",
     "react-redux": "^7.1.1",
+    "react-sticky": "^6.0.3",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
